--- a/package.json
+++ b/package.json
@@ -3,23 +3,25 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test node --test",
     "build:ui": "rm -rf dist && cd ../part2/coursedata/ && npm run build && cp -r dist ../../part4",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs",
     "lint": "eslint . --ignore-pattern \"dist/*\"",
     "lintFix": "eslint . --fix --ignore-pattern \"dist/*\"",
-    "test": "node --test",
     "create": "mkdir controllers models utils tests services && touch index.js app.js .gitignore .env utils/config.js utils/logger.js utils/middleware.js && npm install && npm init @eslint/config@latest"
   },
   "author": "Alejandro Pérez Álvarez",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-async-errors": "^3.1.1",
     "lodash": "^4.17.21",
     "mongoose": "^8.7.2",
     "react": "^18.3.1",
@@ -31,6 +33,7 @@
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.1",
     "globals": "^15.11.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0"
   }
 }
